Fixed problem with overflow in mobile-layout

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,7 @@ header .container .menu .btn-login {
 
 .features {
   border: none;
+  text-align: center;
 }
 @media (min-width: 992px) {
   .features {
@@ -415,34 +416,50 @@ header .container .menu .btn-login {
 }
 .features .container .section-title {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   width: 70%;
   height: 50%;
-  margin-left: 30px;
-  align-content: center;
+  margin: 0 auto;
   padding-bottom: 0;
   padding-top: 50px;
 }
+.features .container .section-title h2 {
+  font-size: 25px;
+  color: #191919;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+}
+@media (min-width: 567px) {
+  .features .container .section-title h2 {
+    font-size: 35px;
+  }
+}
+@media (min-width: 992px) {
+  .features .container .section-title h2 {
+    font-size: 35px;
+  }
+}
+@media (min-width: 1400px) {
+  .features .container .section-title h2 {
+    font-size: 45px;
+  }
+}
 @media (min-width: 992px) {
   .features .container .section-title {
+    flex-direction: row;
     margin-top: -30px;
-    margin-right: 100px;
-    margin-left: 30px;
-  }
-  .features .container .section-title h2 {
-    font-size: 25px;
+    margin: 0 auto;
   }
 }
 @media (min-width: 1400px) {
   .features .container .section-title {
     width: 800px;
-    margin-right: 100px;
     padding-top: 75px;
-    margin-left: 10px;
   }
-  .features .container .section-title h2 {
-    font-size: 45px;
-  }
+}
+.features .container .section-title a {
+  margin: 0 auto;
 }
 @media (min-width: 1200px) {
   .features .container .section-title a {
@@ -461,25 +478,16 @@ header .container .menu .btn-login {
     border-radius: 25px;
   }
 }
-.features .container .section-title h2 {
-  font-size: 25px;
-}
-@media (min-width: 567px) {
-  .features .container .section-title h2 {
-    font-size: 35px;
-  }
-}
 .features .container .advices {
   display: grid;
   grid-template-columns: 1fr;
-  margin-left: 100px;
+  margin: 0 auto;
 }
 @media (min-width: 567px) {
   .features .container .advices {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-evenly;
-    margin-left: 0;
   }
 }
 .features .container .advices h4 {
@@ -500,8 +508,7 @@ header .container .menu .btn-login {
   font-size: 25px;
 }
 .features .container .advices .side {
-  margin-right: 30px;
-  margin-left: 30px;
+  margin: 0 auto;
   width: 200px;
 }
 .features .container .advices .side h4 {
@@ -517,16 +524,7 @@ header .container .menu .btn-login {
 }
 @media (min-width: 992px) {
   .features .container .advices .side {
-    margin-right: 30px;
-    margin-left: 30px;
     width: 300px;
-  }
-}
-@media (min-width: 1400px) {
-  .features .container .advices .side {
-    width: 300px;
-    margin-right: 30px;
-    margin-left: 30px;
   }
 }
 
@@ -537,7 +535,6 @@ header .container .menu .btn-login {
   .about-company .container {
     display: flex;
     justify-content: space-between;
-    padding: 100px 0 100px 0;
     position: relative;
   }
 }
@@ -659,6 +656,10 @@ header .container .menu .btn-login {
   font-family: "Inter", sans-serif;
   font-size: 16;
   font-weight: 600;
+  color: #191919;
+}
+.about-company .container .center-content .intro a {
+  text-decoration: none;
 }
 .about-company .container .center-content .icon-container {
   width: 50px;
@@ -669,6 +670,9 @@ header .container .menu .btn-login {
   justify-content: center;
   align-items: center;
   margin-right: 10px;
+}
+.about-company .container .center-content .icon-container a {
+  color: #191919;
 }
 
 .our-service {
@@ -784,7 +788,7 @@ header .container .menu .btn-login {
   }
 }
 .choose-us .container {
-  width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -796,8 +800,13 @@ header .container .menu .btn-login {
   }
 }
 .choose-us .container .section-title {
-  width: 400px;
+  width: 100%;
   padding-top: 60px;
+}
+@media (min-width: 400px) {
+  .choose-us .container .section-title {
+    width: 400px;
+  }
 }
 @media (min-width: 768px) {
   .choose-us .container .section-title {
@@ -945,6 +954,7 @@ header .container .menu .btn-login {
   margin: auto;
   padding-bottom: 120px;
   position: relative;
+  text-align: center;
 }
 .team-members .bg-employees {
   background-color: #fff;
@@ -996,14 +1006,13 @@ header .container .menu .btn-login {
 .team-members .container .images {
   display: grid;
   grid-template-columns: 1fr;
-  margin-left: 60px;
+  margin: 0 auto;
 }
 @media (min-width: 576px) {
   .team-members .container .images {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin-left: 0;
   }
 }
 @media (min-width: 1200px) {
